[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeekofile"
dynamic = ["version"]
description = "A static website compiler"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Ryan McGuire and Mike Bayer" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "docutils",
    "Mako",
    "Markdown",
    "MarkupSafe",
    "Pygments",
    "pytz",
    "PyYAML",
]

[project.scripts]
zeekofile = "zeekofile.main:main"

[project.urls]
Homepage = "http://github.com/sqlalchemyorg/zeekofile"

[tool.hatch.version]
path = "zeekofile/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/zeekofile",
]
